--- a/less/main.less
+++ b/less/main.less
@@ -19,5 +19,6 @@
 @import "partial/colour-code";
 @import "partial/switch";
 @import "partial/fileupload";
+@import "partial/farbtastic";
 //HELPERS
 
