--- a/less/employer.less
+++ b/less/employer.less
@@ -215,6 +215,7 @@
 	}
 
 	.post-templates {
+		
 		width: 100%;
 		tr {
 			cursor: pointer;
@@ -447,7 +448,7 @@
    }
 	
 	.notice-container {
-		border: 0 !important;
+		border: 1px solid @blue !important;
 	}
 	#employer-profile {
 		form {
