--- a/less/base.less
+++ b/less/base.less
@@ -205,6 +205,16 @@ h1.span12 { margin-bottom: 21px;}
 		margin-top: 20px;
 	}
 }
+
+.wrapper {
+	padding: 10px;
+	box-sizing: border-box;
+	border-radius: 9px;
+	margin-top: 21px;
+	h2 { color: @dark-blue !important;}
+	
+}
+
 @import "applicant";
 @import "feature";
 @import "guide";
