--- a/less/home.less
+++ b/less/home.less
@@ -19,14 +19,11 @@
 			.lato-light(); 
 			strong {
 				color: @light-orange;
-				.lato-normal();
+				.lato-light();
 			}
 		}
 		
-		span {
-			
-			.lato-normal();
-		}
+		
 		#ads {
 			float: right;
 			margin-top: 10px;
