--- a/less/mixins/font.less
+++ b/less/mixins/font.less
@@ -1,21 +1,21 @@
 .font-light() {
-	font-family: 'Arial', sans-serif;
+	font-family: 'Helvetica', sans-serif;
 	font-weight: 300;
 }
 
 .font-normal() {
-	font-family: 'Arial', sans-serif;
+	font-family: 'Helvetica', sans-serif;
 	font-weight: 400;
 }
 
 .font-semi-bol() {
-	font-family: 'Arial', sans-serif;
+	font-family: 'Helvetica', sans-serif;
 	font-weight: 600;
 }
 
 .lato-light() {
 	font-family: 'Lato', sans-serif;
-	font-weight:300;
+	font-weight: 300;
 }
 
 .lato-semibold() {
@@ -24,6 +24,6 @@
 }
 
 .lato-normal() {
-	font-family: 'Lato', sans-serif;
+	font-family: 'Helvetica', sans-serif;
 	font-weight:400;
 }
