--- a/less/footer.less
+++ b/less/footer.less
@@ -1,10 +1,9 @@
 #footer {
 
-	
+	background: rgb(236, 236, 236);
 	bottom: 0;
 	
-	padding-bottom: 45px;
-	padding-top: 45px;
+	
 
 	// a { color: #ccc; }
 	h3 {
@@ -14,8 +13,8 @@
 	ul {
 		margin-left: 0;
 		li {
-			font-size: 14px;
-			.lato-normal();
+			font-size: 11px;
+			.font-normal();
 			float: left;
 			list-style: none;
 			ul {
@@ -34,9 +33,17 @@
 			.box-sizing(border-box);
 		}
 	}
+	
+}
+
+.credit {
+	background: @dark-blue;
 	#copyright { 
-		.lato-normal();
+		color: white;
+		.font-normal();
 		font-size: 12px;
-		padding-left: 30px;
+		line-height: 30px;
+		margin-bottom: 0;
+		text-align: center;
 	}
 }
