--- a/less/guide.less
+++ b/less/guide.less
@@ -72,7 +72,8 @@
 	 
 	}
 	p {
-		font-size:13px;
+		font-size:12px;
+		line-height: 21px;
 	}
 	> ul {
 	  
@@ -119,4 +120,9 @@ form {
 		.border-radius(0);
 	}
 }
-
+.reset-pwd { 
+	color: @dark-orange;
+	&:hover {
+		text-decoration: underline;
+	}
+}
