--- a/less/applicant.less
+++ b/less/applicant.less
@@ -3,8 +3,7 @@
 	
 
 .applicant {
-	
-	
+	background: none;
 	#profile-basic {
 		input[type=text] { width: 245px;}
 		select { width: 259px;}
@@ -64,10 +63,10 @@
 	}
 	.accordion-heading .accordion-toggle {
 		.font-normal();
-		font-size: 16px;
+		font-size: 12px;
 		line-height: 20px;
-		font-weight: bold;
-		padding: 10px 10px;
+		//font-weight: bold;
+		padding: 6px 10px;
 		color: #555;
 		text-shadow: 0 1px 0 #fff;
 		display: block;
@@ -80,6 +79,7 @@
 		background-repeat: repeat-x;
 		margin: 0;
 		h4 {
+			font-size: 12px;
 			margin: 0;
 		}
 	}
