--- a/less/feature.less
+++ b/less/feature.less
@@ -52,7 +52,7 @@ body {
 
 	#pull-down {
 		background: white;
-		border: 5px solid @light-orange;
+		border: 5px solid @blue;
 		border-top: 0;
 		bottom: -40px;
 		cursor: pointer;
@@ -69,7 +69,7 @@ body {
 
 	#side-feature, #side-feature-mobile {
 		clear: both;
-		background: @light-orange;
+		background: @dark-blue;
 		padding: 5px 0 5px 0;
 		.drop-shadow-black;
 		&.affix-top {
