--- a/less/footer.less
+++ b/less/footer.less
@@ -1,13 +1,13 @@
 #footer {
 
-	background: rgb(236, 236, 236);
+	background: rgb(197, 191, 177);
 	bottom: 0;
 	
 	
 
 	// a { color: #ccc; }
 	h3 {
-		color: @dark-blue;
+		color: @dark-brown;
 		.lato-semibold();
 	}
 	ul {
@@ -37,7 +37,7 @@
 }
 
 .credit {
-	background: @dark-blue;
+	background: @dark-brown;
 	#copyright { 
 		color: white;
 		.font-normal();
