--- a/less/form.less
+++ b/less/form.less
@@ -10,14 +10,12 @@
 		color: white;
 		display: block;
 		border-bottom: 0 none;
-		//background: @dark-blue;
-		#gradient .vertical( @light-orange, @dark-orange);
+		background: @dark-brown;
+		//#gradient .vertical( @light-orange, @dark-orange);
 		
 		margin: 0;
 		
-		.applicant & {
-			background: @dark-blue;
-		}
+		
 	}
 
 	.pad {
@@ -34,7 +32,7 @@
 		border: 1px solid #fbeed5 !important;
 	}
 	
-	// .btn-primary {
+	// .btn-warning {
 	// 	margin-left: 5px;
 	// }
 
@@ -112,7 +110,9 @@
 /* =APPLY JOB
 =================================================================== */
 #job-apply {
-	
+	.btn.dropdown-toggle {
+				width: 120px;
+			}
 	ol {
 		width: 100%;
 		li {
@@ -135,6 +135,7 @@
 			.date{
 				width: 100%;
 			}
+			
 		}
 	}
 
