--- a/less/guide.less
+++ b/less/guide.less
@@ -52,12 +52,12 @@
 	 
 	}
 	h1 {
-		.lato-light();
-		color: #fff;
+		.lato-semibold();
+		color: @dark-brown;
 	}
 	h2 {
-		.lato-light();
-		color: #fff;
+		.lato-semibold();
+		color: @dark-brown;
 	}
 	h3 {
 	  
