--- a/less/mixins/settings.less
+++ b/less/mixins/settings.less
@@ -39,7 +39,15 @@
 @blue: #01a5e3;
 @dark-blue: #055285;
 @light-orange: #fbc544;
+@orange: #d9531d;
 @dark-orange: #f09216;
 
+@brown: #533b27;
+@dark-brown: #38342b;
+@red-brown: #A24C44;
+@pastel-brown: #726658;
 @button-blue: #0079c1;
 @button-lighter-blue: #00a1ff;
+
+@green: #99cc33;
+@dark-green: rgb(116, 126, 87);
