--- a/less/feature.less
+++ b/less/feature.less
@@ -17,16 +17,9 @@ body {
 			margin-right: 119px;
 		}
 
-		#job-sub-category {
-			margin-left: 20px;
-		}
-
-		#job-sub-location {
-			margin-left: 20px;
-		}
-
+		
 		.span12 {
-			border: 5px solid @blue;
+			border: 5px solid @dark-brown;
 			border-top: 0;
 			margin-top: 150px;
 			padding-bottom: 10px;
@@ -52,7 +45,7 @@ body {
 
 	#pull-down {
 		background: white;
-		border: 5px solid @blue;
+		border: 5px solid @dark-brown;
 		border-top: 0;
 		bottom: -40px;
 		cursor: pointer;
@@ -69,7 +62,7 @@ body {
 
 	#side-feature, #side-feature-mobile {
 		clear: both;
-		background: @dark-blue;
+		background: @pastel-brown;
 		padding: 5px 0 5px 0;
 		.drop-shadow-black;
 		&.affix-top {
