--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,29 +7,29 @@
 	© 2012 CareersHire. All Rights Reserved.
 	...................................................................... */
 
-#home {
-  background: url('/img/backgrounds/gradient-blue.png') repeat-x top center;
-}
 #home #top-feature {
   margin-top: 64px;
   text-align: center;
 }
 #home #top-feature h1 {
-  color: white;
+  font-size: 58px;
+  color: #38342b;
   font-family: 'Lato', sans-serif;
-  font-weight: 300;
+  font-weight: 600;
+  margin-bottom: 21px;
 }
-#home #top-feature h1 strong {
-  color: #fbc544;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
+#home #top-feature h1 .careers {
+  color: #a24c44;
+}
+#home #top-feature h1 .hire {
+  color: #f09216;
 }
 #home #top-feature #ads {
   float: right;
   margin-top: 10px;
 }
 #home #job-search {
-  border: 5px solid #01a5e3;
+  border: 5px solid #38342b;
   border-top: 0;
   padding-bottom: 10px;
 }
@@ -42,12 +42,6 @@
 #home #job-search #search {
   float: right;
   margin-right: 119px;
-}
-#home #job-search #job-sub-category {
-  margin-left: 20px;
-}
-#home #job-search #job-sub-location {
-  margin-left: 20px;
 }
 #home #content {
   margin-top: 15px;
